# cove

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cove.code-workspace  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/cove-lua/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_seed.sql  003_conversation_workspace.sql  004_workspaces_table.sql  005_attachment_workspace.sql
src-tauri/src/: attachment_commands.rs  clipboard_commands.rs  config_commands.rs  cookie_commands.rs  docx_commands.rs  fetch_commands.rs  fs_commands.rs  git_bash_installer.rs  js_interpreter.rs  lib.rs  officellm_bridge.js  officellm_bridge.lua  shell_commands.rs  sidecar.rs  skill_commands.rs  skill_discovery.rs  skill_resource_commands.rs  soul_backup.rs  soul_commands.rs  soul_defaults.rs  soul_migrate.rs  test_util.rs  workspace_watcher.rs
src-tauri/src/attachment_commands/: commands.rs  file_utils.rs  mod.rs  parsers.rs  preprocess.rs  workspace_save.rs
src-tauri/src/document_parsers/: mod.rs  parsers.rs  tests.rs  truncation.rs
src-tauri/src/docx_commands/: cache.rs  commands.rs  conversion.rs  mod.rs  officellm.rs  officellm_html.rs  qmd.rs
src-tauri/src/fs_commands/: copy.rs  detection.rs  history.rs  list.rs  mod.rs  office.rs  office_read.rs  office_write.rs  order.rs  read.rs  read_absolute.rs  tests.rs  (+11 more)
(+516 files in other folders)
