[package]
name = "app"
version = "1.0.0"
description = "Cove — cowork agent os"
authors = ["Cove Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
calamine = "0.26"
docx-lite = "0.2"
dirs = "6"
libc = "0.2"
log = "0.4"
pdf-extract = "0.10"
quick-xml = "0.37"
tauri = { version = "2.10.0", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
html2md = "0.2"
regex = "1.10"
notify = "6.1"
rquickjs = { version = "0.11", features = ["bindgen", "parallel"] }

[dev-dependencies]
tempfile = "3"
